src/index.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Orbitron:wght@600&family=Ubuntu:wght@700&display=swap');

body {
  background-color: #181818;
  color: white;
  font-family: 'Open Sans', sans-serif;
}

h1 {
  font-family: 'Ubuntu', sans-serif;
}

.startBtn,
.optBtn {
  background-color: rgba(0, 0, 0, 0);
  border: 2px solid;
  border-radius: 10px;
  color: white;
  font-size: 1.2rem;
  margin: 5px;
  padding: 5px 10px;
  transition: 0.5s;
}

.startBtn:hover {
  border-color: #3ae7af;
}

.startBtn:active {
  background-color: #3ae7af
}

.optBtn:hover {
  border-color: #5429d1;
}

.optBtn:active {
  background-color: #5429d1;
}

.startBtn:hover,
.optBtn:hover {
  text-shadow: 0 0 5px;
  box-shadow: 0 0 12px, 0 0 6px;
}

.options {
  background-color: #212121;
  border-radius: 1rem;
}

.btnGroup {
  display: grid;
  gap: 0.5rem;
  grid-template-columns: auto auto;
  width: 10.5rem;
}

.selBtn {
  align-items: center;
  background-color: #121212;
  border-radius: 5%;
  box-shadow: 2px 2px 10px black;
  color: white;
  display: flex;
  justify-content: center;
  transition: 0.4s;
  height: 5rem;
  width: 5rem;
}

.selBtn:hover:not(.selected) {
  box-shadow: 2px 2px 2px black;
  transform: scale(.95);
}

.selected {
  background-color: #2f1877;
}

input[type='text'] {
  background-color: #121212;
  border: none;
  color: white;
}

input[type='text']:disabled {
  background-color: #181818;
  color: gray;
}

.panel {
  background-color: #212121;
  border-radius: 1rem;
}

.score {
  transition: .6s;
  background-color: #121212;
  border: 3px inset gray;
  border-radius: .5rem;
  font-family: 'Orbitron', sans-serif;
  line-height: 1rem;
}

.score p {
  margin-bottom: .5rem;
}

.current {
  background-color: #14a376;
}

.cards {
  border-radius: 10%;
  transform-style: preserve-3d;
  user-select: none;
  -webkit-user-select: none;
}

.cards:hover:not(.flipped) {
  box-shadow: 0 0 7px;
  cursor: pointer;
}

.front,
.back {
  border-radius: 10%;
  overflow: hidden;
}

.front {
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  z-index: 1;
}

.back {
  border: 1px solid #212121;
  transform: rotateY(180deg);
  z-index: -1;
}

.flipped {
  transform: rotateY(180deg);
  transition: transform .3s;
}

.guessed {
  opacity: 0;
  transition: opacity .6s;
}

.grid_4x4,
.grid_4x6,
.grid_6x6,
.grid_6x8 {
  display: grid;
  gap: 1vmin;
}

.grid_4x4 {
  grid-template-columns: auto auto auto auto;
  max-width: 90vh;
}

.grid_4x6,
.grid_6x6 {
  grid-template-columns: auto auto auto auto auto auto;
}

.grid_6x8 {
  grid-template-columns: auto auto auto auto auto auto auto auto;
  max-width: 120vh;
}

.grid_4x6 {
  max-width: 140vh;
}

.grid_6x6 {
  max-width: 90vh;
}

.modal-content {
  background-color: gray;
}

.footer {
  background-color: #121212;
  color: gray;
}

a {
  color: inherit;
  text-decoration: none;
}

@media only screen and (orientation: portrait) {
  .grid_4x6 {
    grid-template-columns: auto auto auto auto;
  }

  .grid_6x8 {
    grid-template-columns: auto auto auto auto auto auto;
  }
}

